2010-09-15  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Jon Honeycutt.

        We should save messages that can't be sent when postMessageToInjectedBundle is called and
        send them in ensureWebProcess.
        https://bugs.webkit.org/show_bug.cgi?id=45822

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::ensureWebProcess):
        Post any messages to the Injected Bundle that couldn't be sent earlier because the
        WebProcess hadn't been initialized yet.
        (WebKit::WebContext::postMessageToInjectedBundle):
        * UIProcess/WebContext.h:

2010-09-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8214099> Mousewheel scrolling in WebKit2 is wonky
        
        Use floats so that fractional scrollwheel deltas don't get lost.

        * Shared/mac/WebEventFactory.mm:
        (WebKit::WebEventFactory::createWebWheelEvent):

2010-09-15  Sam Weinig  <sam@webkit.org>

        Reviewed by Jon Honeycutt.

        Add WKUInt64Ref wrapper for sending uint64_ts.

        * Shared/APIObject.h:
        * Shared/WebNumber.h:
        * UIProcess/API/C/WKAPICast.h:
        * UIProcess/API/C/WKBase.h:
        * UIProcess/API/C/WKNumber.cpp:
        (WKUInt64GetTypeID):
        (WKUInt64Create):
        (WKUInt64GetValue):
        (WKUInt64SetValue):
        * UIProcess/API/C/WKNumber.h:

2010-09-15  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=44715
        maps.google.com flips upside down when zooming map using trackpad in WebKit2 on Mac
        
        Move geometry flipping to platform-specific code.

        * WebProcess/WebPage/LayerBackedDrawingArea.cpp:
        (WebKit::LayerBackedDrawingArea::LayerBackedDrawingArea):
        * WebProcess/WebPage/mac/LayerBackedDrawingAreaMac.mm:
        (WebKit::LayerBackedDrawingArea::platformInit):

2010-09-14  Jia Pu  <jpu@apple.com>
