@@ -40,6 +40,7 @@ namespace WebKit {
 //   - String -> String
 //   - SerializedScriptValue -> SerializedScriptValue
 //   - WebDouble -> WebDouble
+//   - WebUInt64 -> WebUInt64
 
 template<typename Owner>
 class UserMessageEncoder {
@@ -90,6 +91,11 @@ public:
             encoder->encode(doubleObject->value());
             return true;
         }
+        case APIObject::TypeUInt64: {
+            WebUInt64* uint64Object = static_cast<WebUInt64*>(m_root);
+            encoder->encode(uint64Object->value());
+            return true;
+        }
         default:
             break;
         }
@@ -114,6 +120,7 @@ protected:
 //   - String -> String
 //   - SerializedScriptValue -> SerializedScriptValue
 //   - WebDouble -> WebDouble
+//   - WebUInt64 -> WebUInt64
 
 template<typename Owner>
 class UserMessageDecoder {
@@ -183,10 +190,17 @@ public:
             break;
         }
         case APIObject::TypeDouble: {
-            double doubleValue;
-            if (!decoder->decode(doubleValue))
+            double value;
+            if (!decoder->decode(value))
                 return false;
-            coder.m_root = WebDouble::create(doubleValue);
+            coder.m_root = WebDouble::create(value);
+            break;
+        }
+        case APIObject::TypeUInt64: {
+            uint64_t value;
+            if (!decoder->decode(value))
+                return false;
+            coder.m_root = WebUInt64::create(value);
             break;
         }
         default:
